fixed minor annoyance where certain divs would have a 1 pixel gap between them when zoom was at 100%

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ main {
   padding: 5px;
   border-top-left-radius: 4px;
   transition-duration: 300ms;
+  margin-bottom: -0.5px;
 }
 
 .project-card img {
